nginx config done (not tested yet)

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update \
 COPY ./nginx.conf /etc/nginx/sites-available/default
 
 RUN openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj \
-	"/C=FR/ST=Rhone/L=Lyon/O=42/CN=selee.42.fr/emailAddress=selee@student.42lyon.fr" -keyout /path/selee.42.fr.key -out /path/selee.42.fr.crt
+	"/C=FR/ST=Rhone/L=Lyon/O=42/CN=selee.42.fr/emailAddress=selee@student.42lyon.fr" \
+	-keyout /path/selee.42.fr.key -out /path/selee.42.fr.crt
 
 # opening the port
 EXPOSE 443
