--- a/srcs/requirements/nginx/conf/ngingx.conf
+++ b/srcs/requirements/nginx/conf/ngingx.conf
@@ -4,13 +4,33 @@ worker_processes	1;
 error_log	/var/log/nginx-error.log info;
 
 server {
-	listen 80;
-	server_name selee.42.fr;
-	return 301 https://$host$request_uri;
-	# $host?? 
-}
-
-server {
 	listen 443 ssl default_server;
 	listen [::]:443 ssl default_server;
+	ssl_protocol TSLv1.3;
+
+	ssl_certificate /path/selee.42.fr.crt;
+	ssl_key /path/selee.42.fr.key;
+
+	server_name inception_selee;
+	client_max_body_size 100M;
+	# -> uploade size limit
+
+	root /var/www/html;
+	index index.php index.html index.htm
+
+	location / {
+		try_files $uri $uri/ = 404;
+	}
+
+	location ~ \.php$ {
+		include fastcgi_params;
+		fastcgi_pass wordpress:9000;
+		fastcgi_index index.php
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
+	#typical fastcgi_params settings
+	}
 }
+
+
+      
