--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,18 +1,18 @@
-#base image
+# base image
 FROM debian:buster
 
-#run commands
-RUN apt-get update \
+# run commands
+# update && upgrade
+RUN apt-get update -y && apt-get upgrade -y \
 	&& apt-get install -y nginx openssl
-	
+
+# copy the file to the container
 COPY ./conf/nginx.conf /etc/nginx/sites-available/default
 
-RUN openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj \
+RUN mkdir -p /etc/certificate \
+	&& openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj \
 	"/C=FR/ST=Rhone/L=Lyon/O=42/CN=selee.42.fr/emailAddress=selee@student.42lyon.fr" \
 	-keyout /path/selee.42.fr.key -out /path/selee.42.fr.crt
 
-# opening the port
-EXPOSE 9000
-
-#コンテナ実行時の実行コマンド
+# コンテナ実行時の実行コマンド
 CMD ["nginx", "-g", "daemon off;"]
