--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,57 +1,57 @@
-#user  nobody;
-worker_processes  1;
+# #user  nobody;
+# worker_processes  1;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+# #error_log  logs/error.log;
+# #error_log  logs/error.log  notice;
+# #error_log  logs/error.log  info;
 
-#pid        logs/nginx.pid;
-
-
-events {
-    worker_connections  1024;
-}
+# #pid        logs/nginx.pid;
 
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
+# events {
+#     worker_connections  1024;
+# }
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+# http {
+#     include       mime.types;
+#     default_type  application/octet-stream;
 
-    sendfile        on;
-    #tcp_nopush     on;
+#     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+#     #                  '$status $body_bytes_sent "$http_referer" '
+#     #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
+#     #access_log  logs/access.log  main;
 
-    #gzip  on;
+#     sendfile        on;
+#     #tcp_nopush     on;
 
-    server {
-        listen       8080;
-        server_name  localhost;
+#     #keepalive_timeout  0;
+#     keepalive_timeout  65;
 
-        #charset koi8-r;
+#     #gzip  on;
 
-        #access_log  logs/host.access.log  main;
+#     server {
+#         listen       8080;
+#         server_name  localhost;
 
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
+#         #charset koi8-r;
 
-        #error_page  404              /404.html;
+#         #access_log  logs/host.access.log  main;
 
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+#         location / {
+#             root   html;
+#             index  index.html index.htm;
+#         }
+
+#         #error_page  404              /404.html;
+
+#         # redirect server error pages to the static page /50x.html
+#         #
+#         error_page   500 502 503 504  /50x.html;
+#         location = /50x.html {
+#             root   html;
+#         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
@@ -92,25 +92,41 @@ http {
     #}
 
 
+
     # HTTPS server
     #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+		server {
+		# to open the port 443
+		listen	443 ssl default_server; 
+		listen	[::]:443 ssl default_server;
+		
+		server_name  selee.42.fr;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+		root	/var/www/html/wordpress;
+		index	index.php index.html index.htm index.nginx-debian.html
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+		ssl on;
+		ssl_protocols		TLSv1.3 TLSv1.2;
+		ssl_certificate		/etc/certificate/selee.42.fr.crt;
+		ssl_certificate_key	/etc/certificate/selee.42.fr.key;
+		# certificate path inside containers
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+		ssl_ciphers  HIGH:!aNULL:!MD5;
+		ssl_prefer_server_ciphers  on;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-    include servers/*;
+		location / {
+			# if not found, error
+			try_files	$uri $uri/ =404;
+		}
+
+		location ~ \.php$ {
+			fastcgi_pass		wordpress:9000;
+			fastcgi_index		index.php;
+			fastcgi_param		SCRIPT_FILENAME  %document_root$fastcgi_script_name;
+			fastcgi_param		PATH_INFO $fascgi_path_info;
+			include				fastcgi_params;
+		}
+	}
+	
+	# include servers/*;
 }
