--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,15 @@
-DOMAIN_NAME=
 
-MYSQL_ROOT_PASSWORD=
-MYSQL_USER=
-MYSQL_PASSWORD=
+BUILD_PATH="/home/selee/data"
 
-
+DB_NAME=wordpress
+DB_USER=selee
+DB_PASS=0000
+DB_HOST=mariadb
+WP_ADMIN=root
+WP_APASS=root0000
+WP_AMAIL=
+WP_USER=selee
+WP_PASS=0000
+WP_MAIL=
+WP_TITLE='Wordpress'
+WP_URL='selee.42.fr'
