--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,24 @@
 FROM debian:buster
 
-RUN apt-get update \
+RUN apt-get update && apt-get upgrade -y \
 	&& apt-get install -y mariadb-server mariadb-client
+
+ARG DB_NAME
+ARG DB_USER
+ARG DB_PASS
+ARG DB_RACINE
+ARG DB_RPASS
+
+RUN mkdir -p /var/lib/docker/volumes/db_volume
+
+RUN service mysql start \
+	&& mariadb -u root -e \
+	"CREATE DATABASE ${DB_NAME};\
+	CREATE USER ${DB_USER}@'%' IDENTIFIED BY '${DB_PASS}';\
+	GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO ${DB_USER}@'%';\
+	ALTER USER ${DB_RACINE}@'localhost' IDENTIFIED BY '${DB_RPASS}';"
 
 EXPOSE 3306
 
 #コンテナ実行時の入り口
-ENTRYPOINT [ "executable" ] 
+ENTRYPOINT [ "mysql", "--bind-address=0.0.0.0" ] 
