--- a/srcs/.env
+++ b/srcs/.env
@@ -1,15 +1,15 @@
-
-BUILD_PATH="/home/selee/data"
-
+BUILD_PATH="/home/selee/data/"
 DB_NAME=wordpress
 DB_USER=selee
 DB_PASS=0000
+DB_RACINE=root
+DB_RPASS=root0000
 DB_HOST=mariadb
 WP_ADMIN=root
 WP_APASS=root0000
-WP_AMAIL=
+WP_AMAIL=admin@student.42lyon.fr
 WP_USER=selee
 WP_PASS=0000
-WP_MAIL=
+WP_MAIL=wpmail@student.42lyon.fr
 WP_TITLE='Wordpress'
 WP_URL='selee.42.fr'
