--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,49 +3,68 @@
 services: #つくりたいコンテナたちを記述する
   mariadb:
     image: mariadb
+    container_name: mariadb
+    init: true
     volumes:
       - db_volume:/var/lib/mysql/
     restart: always
-    environment:
-      - name=value
-    depends_on:
-      - serviceName
+    # environment:
+    #   - name=value
+    # env_file:
+    #   - .env
     # ports: 
     # entrypoint:
     build:
-      context: ./requirements/mariadb
+      context: ./requirements/mariadb/.
       args:
         - DB_NAME=${DB_NAME}
         - DB_USER=${DB_USER}
         - DB_PASS=${DB_PASS}
-        - DB_HOST=${DB_HOST}
+        - DB_RACINE=${DB_RACINE}
+        - DB_RPASS=${DB_RPASS}
     networks:
       - 42network
   
   nginx:
     image: nginx
+    container_name: nginx
+    init: true
     volumes: 
       - wp_volume:/var/www/html/
     restart: always
-    environment:
-      - name=value
+    # environment:
+    #   - name=value
     depends_on:
       - wordpress
     ports: 443:443 # Containerの外とつなぐポート（WWWにつなぐポート）
-    entrypoint:
+    # entrypoint:
     build:
-      context: ./requirements/nginx/
+      context: ./requirements/nginx/.
       # dockerfile:
       # args:
-    env_file:
+    # env_file:
     networks:
       - 42network
 
   wordpress:
     image: wordpress
+    container_name: wordpress
     volumes:
       - wp_volume:/var/www/html/
     restart: always
+    depends_on:
+      - mariadb
+    # ports:
+    # entrypoint:
+    build:
+      context: ./requirements/wordpress/.
+      args:
+        - DB_NAME=${DB_NAME}
+        - DB_USER=${DB_USER}
+        - DB_PASS=${DB_PASS}
+        - DB_RACINE=${DB_RACINE}
+        - DB_HOST=${DB_HOST}
+    # env_file:
     environment:
       - WP_ADMIN=${WP_ADMIN}
       - WP_APASS=${WP_APASS}
@@ -55,18 +74,6 @@ services: #つくりたいコンテナたちを記述する
       - WP_MAIL=${WP_MAIL}
       - WP_TITLE=${WP_TITLE}
       - WP_URL=${WP_URL}
-    depends_on:
-      - mariadb
-    ports:
-    entrypoint:
-    build:
-      context: ./requirements/
-      args:
-        - DB_NAME=${DB_NAME}
-        - DB_USER=${DB_USER}
-        - DB_PASS=${DB_PASS}
-        - DB_HOST=${DB_HOST}
-    env_file:
     networks:
       - 42network
 
@@ -90,4 +97,3 @@ networks:
   42network:
     name: 42network
     driver: bridge
-
